@@ -27,8 +27,6 @@ class Deliver_SMTP extends Deliver {
         }
     }
 
-    // TODO merge 1.5.1 changes regarding system wide SMTP username
-
     function initStream($message, $domain, $length=0, $host='', $port='', $user='', $pass='', $authpop=false) {
         global $use_smtp_tls,$smtp_auth_mech,$username,$key,$onetimepad;
 
